# sql_gen

./: .gitignore  README.md  pkg_version.py  pyproject.toml
SQL_output/: 65dadf79-d3e6-42fe-aadd-888b0e67d075_sql.txt  7c5576e9-b815-477f-99e6-bc056cc4bc48_sql.txt
app/investigation/: investigation_generator.py  investigation_prompt.py
app/planner/: complete_plan.py  execution_plan.py  intent_analyser.py  light_weight_analysis_prompt.py  models.py  query_analyzer.py
app/prompt/: query_analyzer_prompt.py
app/reterival/: context_builder.py  ingestion.py  metadata_retriever.py  qdrant_loader.py  reterival_logic.py
app/sql_generation/: SQL_generation.py  sql_generator_prompt.py
execution_plans/: 65dadf79-d3e6-42fe-aadd-888b0e67d075.json  7c5576e9-b815-477f-99e6-bc056cc4bc48.json
metadata/: business_catalog.json  embedder.py  glossary.json  kpi.json  metadata_builder.py  relationship.json  relationship.py  schema.json
