[project]
name = "sql-gen"
version = "0.1.0"
description = "SQL generation based on table schema"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai==2.38.0",
    "qdrant-client==1.18.0",
    "pandas==3.0.3",
    "sqlalchemy==2.0.45",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.2",
    "pydantic==2.13.4",
    "fastapi==0.136.3",
    "uvicorn==0.48.0",
    "ipykernel==7.2.0"

]
